--- a/.gitignore
+++ b/.gitignore
@@ -507,6 +507,10 @@ fabric.properties
 # Poetry local configuration file - https://python-poetry.org/docs/configuration/#local-configuration
 poetry.toml
 
+*.sqlite3
+*.sqlite
+*.db
+
 # ruff
 .ruff_cache/
 
