--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,10 @@
 # Created by https://www.toptal.com/developers/gitignore/api/python,pycharm,django,sass,node
 # Edit at https://www.toptal.com/developers/gitignore?templates=python,pycharm,django,sass,node
 
+
+.idea
+.idea/*
+
 ### Django ###
 *.log
 *.pot
