--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,13 +4,14 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "build-css": "sass ../front-end/bulma_custom.scss  ../static/css/bulma.css",
-    "css-watch": "npm run build-css -- --watch"
+    "build-css": "tailwindcss -i ./styles.css -o ../static/css/tailwind.css",
+   "css-watch": "tailwindcss -i ./styles.css -o ../static/css/tailwind.css --watch"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "bulma": "^0.9.4",
-    "sass": "^1.71.1"
+    "autoprefixer": "^10.4.17",
+    "postcss": "^8.4.35",
+    "tailwindcss": "^3.4.1"
   }
 }
